# kedro-genai-starter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
static/: kedro-genai-starter.excalidraw
{{ cookiecutter.repo_name }}/: .env.example  README.md  app.py  pyproject.toml  requirements.txt  ui.py
{{ cookiecutter.repo_name }}/conf/base/: catalog.yml  parameters.yml
{{ cookiecutter.repo_name }}/conf/demo/: catalog.yml  credentials.yml  parameters.yml
{{ cookiecutter.repo_name }}/docs/source/: conf.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: settings.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/datasets/: __init__.py  pinecone_dataset.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/agent_rag/: nodes.py  pipeline.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/create_vector_store/: nodes.py  pipeline.py
