[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.python_package }}"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "kedro~={{ cookiecutter.kedro_version }}",
    "langchain>=0.3.0",
    "scikit-learn~=1.5.1",
    "deeplake[labelbox]~=3.9.16",
    "openai~=1.70.0",
    "langchain-openai~=0.3.12",
    "kedro-datasets>=3.0",
    "questionary~=2.1.0",
    "structlog>=25.3.0",
    "pydantic-settings>=2.9.1",
    "pinecone~=6.0.0",
]

[project.scripts]
"{{ cookiecutter.repo_name }}" = "{{ cookiecutter.python_package }}.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8",
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
]

[dependency-groups]
api = [
    "fastapi[standard]>=0.115.12",
]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.python_package }}.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "{{ cookiecutter.python_package }}"
project_name = "{{ cookiecutter.repo_name }}"
kedro_init_version = "{{ cookiecutter.kedro_version }}"
tools = ['None']
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/{{ cookiecutter.python_package }} -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
lint.select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
lint.ignore = ["E501"]  # Ruff format takes care of line-too-long
